examples/kubernetes/nfs-ingress/ingress-controller.yaml
---
# create an ingress-controller in both the
# default & autostructure-development namespaces.
# gcr.io/google_containers/nginx-ingress-controller:0.9.0-beta.15
# gcr.io/google_containers/nginx-ingress-controller:0.8.3

# apiVersion: v1
# kind: Service
# metadata:
#   namespace: default
#   name: nginx-ingress-controller
# spec:
#   type: NodePort
#   selector:
#     app: inginx-ingress-controller
#   ports:
#   - name: http
#     port: 80
#     nodePort: 34080
#   - name: https
#     port: 443
#     nodePort: 34443
#   - name: http-mgmt
#     port: 18080
#     nodePort: 34188
# ---
# apiVersion: extensions/v1beta1
# kind: Deployment
# metadata:
#   namespace: default
#   name: nginx-ingress-controller
# spec:
#   replicas: 1
#   template:
#     metadata:
#       labels:
#         app: inginx-ingress-controller
#     spec:
#       terminationGracePeriodSeconds: 60
#       containers:
#       - image: gcr.io/google_containers/nginx-ingress-controller:0.8.3
#         name: nginx-ingress-controller
#         imagePullPolicy: Always
#         ports:
#           - containerPort: 80
#             name: http
#             protocol: TCP
#           - containerPort: 443
#             name: https
#             protocol: TCP
#           - containerPort: 18080
#             name: http-mgmt
#             protocol: TCP
#         livenessProbe:
#           httpGet:
#             path: /healthz
#             port: 10254
#             scheme: HTTP
#           initialDelaySeconds: 30
#           timeoutSeconds: 5
#         env:
#           - name: POD_NAME
#             valueFrom:
#               fieldRef:
#                 fieldPath: metadata.name
#           - name: POD_NAMESPACE
#             valueFrom:
#               fieldRef:
#                 fieldPath: metadata.namespace
#         args:
#         #- /ingress-controller
#         - --default-backend-service=$(POD_NAMESPACE)/nginx-ingress-default-backend
---
apiVersion: v1
kind: Service
metadata:
  namespace: autostructure-development
  name: nginx-ingress-controller
spec:
  type: NodePort
  selector:
    app: inginx-ingress-controller
  ports:
  - name: http
    port: 80
    nodePort: 35080
  - name: https
    port: 443
    nodePort: 35443
  - name: http-mgmt
    port: 18080
    nodePort: 35188
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: autostructure-development
  name: nginx-ingress-controller
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: inginx-ingress-controller
    spec:
      terminationGracePeriodSeconds: 60
      containers:
      - image: gcr.io/google_containers/nginx-ingress-controller:0.8.3
        name: nginx-ingress-controller
        imagePullPolicy: Always
        ports:
          - containerPort: 80
            name: http
            protocol: TCP
          - containerPort: 443
            name: https
            protocol: TCP
          - containerPort: 18080
            name: http-mgmt
            protocol: TCP
        livenessProbe:
          httpGet:
            path: /healthz
            port: 10254
            scheme: HTTP
          initialDelaySeconds: 30
          timeoutSeconds: 5
        args:
          #- /ingress-controller
          - --default-backend-service=$(POD_NAMESPACE)/nginx-ingress-default-backend
